# migration-to-flink-skills

./: .env.example  .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml
flink-skill-common/: README.md  pyproject.toml
flink-skill-common/.claude/skills/validate-flink-sql/: SKILL.md
flink-skill-common/.claude/skills/validate-flink-sql/references/: confluent-sql-deploy.md
flink-skill-common/.claude/skills/validate-flink-sql/scripts/: validate_offline.py
flink-skill-common/harness/: pyproject.toml
flink-skill-common/harness/src/flink_skill_common/: __init__.py  cli_validate.py  config.py  convergence.py  fixtures.py  sql_preprocess.py  sql_validate.py
flink-skill-common/harness/src/flink_skill_common/agents/: __init__.py  deploy_fixer.py  factory.py  sources.py
flink-skill-common/harness/src/flink_skill_common/deploy/: statements.py  (+1 more)
flink-skill-common/harness/test_output/george_martin/: ddl.george_martin.sql  dml.george_martin.sql
flink-skill-common/harness/tests/: flink_ref_fixtures.py
flink-skill-common/harness/tests/it/: conftest.py  flink_fixtures.py  run_debug_attach.sh  test_convergence_it copy.py  test_convergence_it.py  test_scenario.py  test_source_agent.py  test_validation_it.py
flink-skill-common/harness/tests/ut/: test_adapt_skills.py  test_config.py  test_convergence.py  test_deploy_fixer.py  test_factory.py  test_flink_dialect.py  test_flink_statement_manager.py  test_llm.py  test_mcp_server.py  test_output.py  test_sql_process.py  test_sql_validate.py
flink-skill-common/skill/: SKILL.md
flink-skill-common/skill/prompts/: source_ddl.txt
flink-skill-common/skill/references/: confluent-sql-deploy.md
flink-skill-common/skill/scripts/: validate_remote.py
flink-skill-common/src/flink_skill_common/: __init__.py  compare.py  config.py  llm.py  logging_config.py  output.py  sql_preprocess.py  sql_validate.py
flink-skill-common/src/flink_skill_common/agents/: __init__.py  factory.py
flink-skill-common/src/flink_skill_common/deploy/: __init__.py  agno_tools.py  flink_statement_manager.py  llm_tools.py  statements.py
flink-skill-common/tests/: conftest.py  test_agno_tools.py  test_compare.py  test_flink_statement_manager.py  test_llm.py  test_output.py  test_sql_preprocess.py
flink-skill-common/tests/it/: conftest.py  test_llm_config.py  test_scenario.py
flink-skill-common/tests/ut/: test_config.py  test_llm.py  test_output.py  test_sql_process.py
ksql-to-flink-skill/harness/: .env.example  pyproject.toml
ksql-to-flink-skill/harness/src/ksql_flink_skill/: __init__.py  cli.py  config.py  output.py  sources.py  sql_utils.py
ksql-to-flink-skill/harness/src/ksql_to_flink/: cli.py  cli_progress.py  fixtures.py  ksql_utils.py  migrate_agent.py  pipeline.py  sources.py  sql_utils.py
ksql-to-flink-skill/harness/tests/: test_agent_skills.py  test_cli_migrate.py  test_confluent_sql_deploy_integration.py  test_deploy_statements.py  test_dml_deps.py  test_fixtures.py  test_flink_deploy_preflight.py  test_ksql_golden.py  test_pipeline_offline.py  test_skill_deploy_docs.py
ksql-to-flink-skill/harness/tests/it/: debug.py  live_cli_runner.py  run_debug_attach.sh  test_cli_migrate.py  test_routing_ksql_migrate.py
ksql-to-flink-skill/harness/tests/ut/: test_cli_migrate.py  test_cli_migrate_progress.py  test_config.py  test_ksql_parsing.py  test_skill_patterns.py
spark-to-flink-skill/harness/: .env.example  pyproject.toml
spark-to-flink-skill/harness/output/: ddl.src_c360_customers.sql  dml.src_c360_customers.sql
spark-to-flink-skill/harness/src/spark_flink_skill/: __init__.py  cli.py  compare.py  config.py  fixtures.py  output.py  sql_utils.py
spark-to-flink-skill/harness/tests/: conftest.py  test_agent_skills.py  test_c360_golden.py  test_fixtures.py  test_pipeline_offline.py
(+170 files in other folders)
