[project]
name = "flink-skill-common"
version = "0.1.0"
description = "Shared Python harness for ksql-to-flink and spark-to-flink migration skills"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.0.0",
    "confluent-sql>=0.3.1",
    "mcp>=1.6.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "sqlglot>=26.0.0",
]

[project.scripts]
flink-skill-mcp = "flink_skill_common.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flink_skill_common"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
markers = [
    "integration: tests requiring live Confluent Cloud Flink credentials",
    "integration_agent: integration tests requiring reachable LLM for deploy-fixer agent",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
]
